opam-version: "2.0"
license: "MIT"
homepage: "https://github.com/getsentry/sentry-ocaml"
doc: "https://github.com/getsentry/sentry-ocaml"
bug-reports: "https://github.com/getsentry/sentry-ocaml/issues"
dev-repo: "git+https://github.com/getsentry/sentry-ocaml.git"
synopsis: "Native OCaml SDK for Sentry error monitoring and performance tracking"
description: """
A comprehensive OCaml SDK for Sentry that provides error reporting, breadcrumbs, 
user context, and performance monitoring capabilities. Built with Lwt for 
asynchronous operations and integrates seamlessly with OCaml's logging system.
"""

depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0"}
  "cohttp" {>= "6.0.0"}
  "cohttp-lwt" {>= "6.0.0"}
  "lwt" {>= "5.6.0"}
  "yojson" {>= "1.7.0"}
  "uuidm" {>= "0.9.8"}
  "logs" {>= "0.7.0"}
  "logs-lwt" {>= "0.7.0"}
  "base64" {>= "3.5.0"}
  "cmdliner" {>= "1.1.0"}
  "fmt" {>= "0.9.0"}
  "result" {>= "1.5"}
]

depopts: [
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "ocamlformat" {with-dev}
  "merlin" {with-dev}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

tags: ["org:sentry" "org:monitoring" "org:error-tracking"]
url {
  src: "git+https://github.com/getsentry/sentry-ocaml.git"
}
