(lang dune 3.0)
(name sentry-ocaml)
(source (github getsentry/sentry-ocaml))
(package
 (name sentry-ocaml)
 (synopsis "Native OCaml SDK for Sentry error monitoring and performance tracking")
 (description "A comprehensive OCaml SDK for Sentry that provides error reporting, breadcrumbs, user context, and performance monitoring capabilities.")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (cohttp (>= 6.0.0))
  (cohttp-lwt (>= 6.0.0))
  (lwt (>= 5.6.0))
  (yojson (>= 1.7.0))
  (uuidm (>= 0.9.8))
  (logs (>= 0.7.0))
  (base64 (>= 3.5.0))
  (cmdliner (>= 1.1.0))
  (fmt (>= 0.9.0))
  (result (>= 1.5))
  (alcotest :dev)
  (alcotest-lwt :dev)
  (ocamlformat :dev)
  (merlin :dev))
 (tags (sentry monitoring error-tracking))
 (license MIT)
 (homepage "https://github.com/getsentry/sentry-ocaml")
 (bug_reports "https://github.com/getsentry/sentry-ocaml/issues"))
