(executable
 (name basic_exn_1)
 (libraries sentry-ocaml lwt lwt.unix lwt_ssl unix))

(executable
 (name basic_exn_2)
 (libraries sentry-ocaml lwt lwt.unix lwt_ssl unix))

(executable
 (name basic_msg)
 (libraries sentry-ocaml lwt lwt.unix lwt_ssl unix))

(executable
 (name stack_trace)
 (libraries sentry-ocaml lwt lwt.unix lwt_ssl unix))

(executable
 (name http_request)
 (libraries sentry-ocaml lwt lwt.unix lwt_ssl unix))

(executable
 (name performance)
 (libraries sentry-ocaml lwt lwt.unix lwt_ssl unix))
